@@ -1,0 +1,24 @@
+-- Pandora FMS - the Flexible Monitoring System
+-- ============================================
+-- Copyright (c) 2010 Artica Soluciones Tecnológicas, http://www.artica.es
+-- Please see http://pandora.sourceforge.net for full contribution list
+
+-- This program is free software; you can redistribute it and/or
+-- modify it under the terms of the GNU General Public License
+-- as published by the Free Software Foundation for version 2.
+-- This program is distributed in the hope that it will be useful,
+-- but WITHOUT ANY WARRANTY; without even the implied warranty of
+-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+-- GNU General Public License for more details.
+-- You should have received a copy of the GNU General Public License
+-- along with this program; if not, write to the Free Software
+-- Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
+-- PLEASE NO NOT USE MULTILINE COMMENTS 
+-- Because Pandora Installer don't understand them
+-- and fails creating database !!!
+
+-- -----------------------------------------------------
+-- Table `tgrupo`
+-- -----------------------------------------------------
+ALTER TABLE `tgrupo` MODIFY `nombre` text;
